2010-05-12  Tony Chang  <tony@chromium.org>

Reviewed by Darin Adler.

        Spellcheck disabling does not disable context menu
        https://bugs.webkit.org/show_bug.cgi?id=25639

        * editing/spelling/context-menu-suggestions.html: Added.
        * platform/chromium/test_expectations.txt:
        * platform/gtk/Skipped:
        * platform/mac-leopard/editing/spelling/context-menu-suggestions-expected.txt: Added.
        * platform/qt/Skipped:
        * platform/win/Skipped:
2010-05-12  Tony Chang  <tony@chromium.org>

        Reviewed by Darin Adler.

        Spellcheck disabling does not disable context menu
        https://bugs.webkit.org/show_bug.cgi?id=25639

        Test: editing/spelling/context-menu-suggestions.html

        * platform/ContextMenu.cpp:
        (WebCore::ContextMenu::populate):
2010-05-12  Tony Chang  <tony@chromium.org>

        Reviewed by Darin Adler.

        Spellcheck disabling does not disable context menu
        https://bugs.webkit.org/show_bug.cgi?id=25639

        * DumpRenderTree/mac/EventSendingController.mm:
        (+[EventSendingController isSelectorExcludedFromWebScript:]):
        (+[EventSendingController webScriptNameForSelector:]):
        (-[EventSendingController contextClick:]): add a bool parameter that
              when true, dumps the context menu items to stdout.

Canonical link: https://commits.webkit.org/50724@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59585 268f45cc-cd09-0410-ab3c-d52691b4dbfc