WebKitTools/DumpRenderTree/mac/EventSendingController.mm
@@ -122,7 +122,7 @@ BOOL replayingSavedEvents;
 {
     if (aSelector == @selector(beginDragWithFiles:)
             || aSelector == @selector(clearKillRing)
-            || aSelector == @selector(contextClick)
+            || aSelector == @selector(contextClick:)
             || aSelector == @selector(enableDOMUIEventLogging:)
             || aSelector == @selector(fireKeyboardEventsToElement:)
             || aSelector == @selector(keyDown:withModifiers:withLocation:)
@@ -152,6 +152,8 @@ BOOL replayingSavedEvents;
 {
     if (aSelector == @selector(beginDragWithFiles:))
         return @"beginDragWithFiles";
+    if (aSelector == @selector(contextClick:))
+        return @"contextClick";
     if (aSelector == @selector(enableDOMUIEventLogging:))
         return @"enableDOMUIEventLogging";
     if (aSelector == @selector(fireKeyboardEventsToElement:))
@@ -492,7 +494,7 @@ static int buildModifierFlags(const WebScriptObject* modifiers)
     [self mouseScrollByX:x andY:y continuously:NO];
 }
 
-- (void)contextClick
+- (void)contextClick:(BOOL)shouldPrintMenuItems
 {
     [[[mainFrame frameView] documentView] layout];
     [self updateClickCountForButton:RightMouseButton];
@@ -508,8 +510,19 @@ static int buildModifierFlags(const WebScriptObject* modifiers)
                                         pressure:0.0];
 
     NSView *subView = [[mainFrame webView] hitTest:[event locationInWindow]];
-    if (subView)
-        [subView menuForEvent:event];
+    if (subView) {
+        NSMenu* menu = [subView menuForEvent:event];
+        if (shouldPrintMenuItems) {
+            printf("ContextMenuItems: ");
+            for (int i = 0; i < [menu numberOfItems]; ++i) {
+                if (i > 0)
+                    printf(", ");
+                NSMenuItem* menuItem = [menu itemAtIndex:i];
+                fputs([menuItem isSeparatorItem] ? "<separator>" : [[menuItem title] UTF8String], stdout);
+            }
+            printf("\n");
+        }
+    }
 }
 
 - (void)scheduleAsynchronousClick
